# ontoresearch

./: .coverage  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml
src/ontokernel/: __init__.py  config.py  enricher.py  graph.py  migration.py  namespace.py  protocols.py  registry.py  schema.py
src/ontokernel/backends/: __init__.py  kuzu.py  neo4j.py  networkx.py
src/ontology/: __init__.py  enricher.py  graph.py  migration.py  namespace.py  protocols.py  registry.py  schema.py
src/ontology/backends/: __init__.py  kuzu.py  neo4j.py  networkx.py
tests/: conftest.py  test_backend_conformance.py  test_config.py  test_enricher.py  test_graph.py  test_kuzu_specific.py  test_namespace.py  test_registry.py  test_schema.py
