[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontokernel"
version = "1.1.0a1"
description = "Domain-agnostic ontology kernel — typed knowledge graph engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Orson Carcelli", email = "orcarcelli@gmail.com"}]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
kuzu = ["kuzu>=0.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = ["ruff", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["networkx.*", "kuzu.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]